--- a/TODO
+++ b/TODO
@@ -12,3 +12,5 @@ Implement V1 of Runs
 Protect actions so that they reject for the correct reason instead of "You can not install Akamatsu Mem Chip because you do not have enough clicks left."
 
 Corp: ApplyMods on every Install (probably break 'install' into own function)
+
+Remote serevrs are still created if asset/ice install fails.  Need to move all logic server-side to fix this.
