--- a/TODO
+++ b/TODO
@@ -11,3 +11,5 @@ Implement V1 of Runs
 Protect actions so that they reject for the correct reason instead of "You can not install Akamatsu Mem Chip because you do not have enough clicks left."
 
 Corp: ApplyMods on every Install (probably break 'install' into own function)
+
+remove game() function from client-side
