Remove broken startGame drawCards functions

--- a/TODO
+++ b/TODO
@@ -11,3 +11,5 @@ Implement V1 of Runs
 Corp: ApplyMods on every Install (probably break 'install' into own function)
 
 remove game() function from client-side
+
+fix drawCards to not draw 1 card until the previous one has been drawn
